# learning_lbm_collision_operator

./: .gitignore  AI_INSTRUCTION.md  CLAUDE.md  INSTALL.md  create_trainset.ipynb  kerascompat.py  lbml_simulation.ipynb  main.py  pyproject.toml  run-all-pytorch.py  run-all-tensorflow.py  train_network.ipynb  utils.py  utils_pytorch.py
artifacts-run-all-pytorch/: node-execution-time-comparison.md  sweep-jobs.tsv
docs/: exp-01-sweep-gpu-on-snellius.md  exp-02-sweep-pytorch-vs-tensorflow.md
jobs/: run-all-pytorch.sh  run-all-tensorflow-das5.sh  run-all-tensorflow-gpu_mig.sh  run-all-tensorflow.sh
scripts/: 01-exp-sweep.node.with.without.gpu.execution.time-das5.sh  01-exp-sweep.node.with.without.gpu.execution.time.sh  das5-py-runtime-setup.sh  snellius-py-runtime-setup-pytorch.sh  snellius-py-runtime-setup.sh  sync-local-das5.sh  sync-local-snellius.sh
scripts-simulator-lbm/: lbm_karman-ng.py
