[project]
name = "learning-lbm-collision-operator"
version = "0.1.0"
description = "Learning Lattice Boltzmann collision operators with neural networks"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.21.0",
    "torch>=2.4.0",
]

[dependency-groups]
dev = [
    "jupyter",
]

[tool.uv]
package = false
